--- a/angular-client/app3.html
+++ b/angular-client/app3.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title></title>
+<head><title></title>		
+
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+     <script src="http://code.jquery.com/jquery-1.8.0.min.js"></script>
+        <script src="js/jquery.movingboxes.js"></script>
+        <script src="/path/to/jquery.cookie.js"></script>
 	<script type="text/javascript" src="index.js"></script>
 	<script type="text/javascript" src="components/app.js"></script>  
 	<link   href="templates/app.css" rel="stylesheet" />
@@ -11,6 +14,8 @@
 	<script type="text/javascript" src="components/project.js"></script> 
 	<script type="text/javascript" src="components/profile.js"></script> 
 	<script type="text/javascript" src="components/tasks.js"></script>  
+	<script type="text/javascript" src="components/chat.js"></script>  
+
 	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Gugi" rel="stylesheet"> 
@@ -38,6 +43,29 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<!-- MDB core JavaScript -->
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.0/js/mdb.min.js"></script>
+		 <script type="text/javascript"	>
+
+
+function drag(e) {
+ // Add the target element's id to the data transfer object
+
+ e.dataTransfer.setData('anything', e.target.id);
+ 
+ 
+};
+function allowdrop(e) {
+ e.preventDefault();
+ // Set the dropEffect to move
+}
+function drop(e) {
+ 
+ // Get the id of the target and add the moved element to the target's DOM
+ var data = e.dataTransfer.getData('anything');
+
+e.target.appendChild(document.getElementById(data))
+}
+</script>
+	
 </head>	
 
 <body ng-app="mainTask">
@@ -45,6 +73,6 @@
 	<tasks>
 		
 	</tasks>
-
+<chat></chat>
 </body>
 </html>
